--- a/src/app/seller-auth/seller-auth.component.css
+++ b/src/app/seller-auth/seller-auth.component.css
@@ -4,3 +4,10 @@
     margin-top: 80px;
     color: blueviolet;
 }
+.auth-toggle-link{
+    color:blueviolet;
+    font-size: 14px;
+    margin-top: 20px;
+    text-align: left;
+    cursor: pointer;
+}
